Login page mockup ready

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -86,7 +86,7 @@ nav {
         opacity: 1;
     }
 
-    .active {
+    .activate {
         color: #000 !important;
         // text-decoration: none;
         // letter-spacing: 3px;
